samples/_failures_safe/1761600928_bf7d02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dd451b0.c: In function ‘main’:
./samples/SAFE/__tmp_9dd451b0.c:160:20: error: missing terminating " character
  160 |             printf("
      |                    ^
./samples/SAFE/__tmp_9dd451b0.c:160:13: error: expected expression at end of input
  160 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_9dd451b0.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9dd451b0.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9dd451b0.c:160:13: error: expected declaration or statement at end of input
